# stride-compiler

./: CMakeLists.txt  README.md  todo.md
docs/: bnf-expressions.md  node-types.md
src/: Parser.cpp  Parser.h  StrideFile.cpp  StrideFile.h  assembly.h  main.cpp
src/analysis/: expression.h  lexer.cpp  lexer.h  token.cpp  token.h
src/ast/: ASTNodes.h  ASTParser.cpp  Lookahead.cpp  Lookahead.h  NPGenerics.cpp  NPIdentifiers.cpp  NPTypes.cpp  NodeProperties.h  Reducible.h  TokenPatterns.cpp  TokenPatterns.h  ast.cpp  ast.h  ast_error_handling.cpp  ast_error_handling.h  ast_token_seeking.cpp  node_abstractions.h
src/ast/abstractions/: ASTNodeAbstractions.h  ASTParser.cpp  Lookahead.cpp  Lookahead.h  NClassDeclaration.cpp  NFunctionDeclaration.cpp  StrideFile.cpp  StrideFile.h  TokenSet.cpp  TokenSet.h
src/ast/nodes/: NBinaryOperator.cpp  NBlock.cpp  NClassDeclaration.cpp  NConditionalStatement.cpp  NDoWhileLoop.cpp  NEnumerableDeclaration.cpp  NExpression.cpp  NForLoop.cpp  NFunctionDeclaration.cpp  NImportStatement.cpp  NModuleDeclaration.cpp  NStructureDeclaration.cpp  NSwitchStatement.cpp  NThrowStatement.cpp  NTryCatchStatement.cpp  NVariableDeclaration.cpp  append_defs.sh
src/ast/nodes/definitions/: NArray.h  NBinaryOperation.h  NBlock.h  NClassDeclaration.h  NConditionalStatement.h  NDoWhileLoop.h  NEnumerableDeclaration.h  NExpression.h  NForLoop.h  NFunctionCall.h  NFunctionDeclaration.h  NIdentifier.h  NImportStatement.h  NLiteral.h  NModuleDeclaration.h  NOperatorOverload.h  NReturnStatement.h  NStructureDeclaration.h  NSwitchStatement.h  NThrowStatement.h  NTryCatchStatement.h  NUnaryOperator.h  NVariableDeclaration.h  NWhileLoop.h
src/ast/syntax/: classes.cpp  code_blocks.cpp  do_while.cpp  enumerables.cpp  expressions.cpp  for_loop.cpp  function_call.cpp  function_declaration.cpp  generics.cpp  identifiers.cpp  if_else.cpp  import_statement.cpp  module_statement.cpp  returning.cpp  structures.cpp  switch_case.cpp  throw.cpp  try_catch.cpp  variable_declaration.cpp  variable_types.cpp  variable_types.h  while_loop.cpp
src/ast/syntax/validation/: syntax_validation.cpp  syntax_validation.h
src/ast/syntax/validation/variables/: variable_redeclaration.cpp  variable_scope_access_order.cpp
src/ast/syntax_parsing/: code_blocks.cpp  enumerables.cpp  expressions.cpp  for_loop.cpp  function_call.cpp  function_declaration.cpp  identifiers.cpp  if_else.cpp  import_statement.cpp  shared_statement.cpp  try_catch.cpp  types.h  variable_declaration.cpp  variable_types.cpp  variable_types.h  while_loop.cpp
src/ast/validation/: function_exists_before_call.cpp  if_statement_validation.cpp  symbol_scope_existence.cpp  syntax_validation.cpp  syntax_validation.h
src/error/: ast_error_handling.cpp  ast_error_handling.h
src/parsing/: AST.cpp  AST.h  ast_parser.cpp  ast_parser.h
src/syntax_tree/: ASTNodes.h  ASTParser.cpp  NPIdentifiers.cpp  NPTypes.cpp  NodeProperties.h
src/syntax_tree/node_types/: NBinaryOperator.cpp  NBlock.cpp  NClassDeclaration.cpp  NEnumerableDeclaration.cpp  NExpression.cpp  NFunctionDeclaration.cpp  NImportStatement.cpp  NLiteral.cpp  NReturnStatement.cpp  NStructureDeclaration.cpp  NSwitchStatement.cpp  NVariableDeclaration.cpp  NWhileLoop.cpp
src/syntax_tree/node_types/definitions/: NBinaryOperation.h  NClassDeclaration.h  NConditionalStatement.h  NExpression.h  NFunctionCall.h  NIdentifier.h  NImportStatement.h  NStructureDeclaration.h  NSwitchStatement.h  NWhileLoop.h
src/tokens/: TokenSet.cpp  TokenSet.h  token.cpp  token.h  tokenizer.cpp  tokenizer.h
test-code/: test.sr  test2.sr
